--- a/Egalloc/WebContent/css/secondpage.css
+++ b/Egalloc/WebContent/css/secondpage.css
@@ -1,4 +1,4 @@
-/* SET-UP */
+/* PAGE */
 html, body {
 	background-color: white;
 }
@@ -10,6 +10,7 @@ html, body {
 }
 
 /* COLLAGE / ERROR-MESSAGE AREA */
+/* located in #collage-area */
 #collage-generator {
   position: relative;
   width: 100%;
@@ -59,6 +60,7 @@ html, body {
 
 
 /* SEARCH & EXPORT BAR */
+/* located in #search-container */
 #search-container {
   padding: 10px 0;
 }
@@ -69,11 +71,12 @@ html, body {
 }
 
 /* SAVED COLLAGES */
+/* located in #saved-collages */
 #saved-collages {
   position: relative;
   background-color: white;
   padding: 20px 0;
-  
+
   /* for horizontal scroll */
   width: auto;
   height: 120px;
